--- a/index.html
+++ b/index.html
@@ -89,11 +89,10 @@
     <body>
     <!--头像-->
     <div class="cs">
-        <img src="https://love109.cn/images/love109.jpg" id="logo">
+        <img src="https://tva1.sinaimg.cn/large/008i3skNly1gxxi3jl8juj31880u0aii.jpg" id="logo">
     </div>
     <canvas class="canvas" width="1820" height="905"></canvas>
     <p class="text" style="color: #ed3073;">我们已经相爱了
-    <span id="span_dt_dt"></span><br>请在电脑端浏览本页😘
     </p>
     <script language="javascript">
         function show_date_time() {
@@ -120,7 +119,7 @@
             init: function () {
                 S.Drawing.init('.canvas');
                 document.body.classList.add('body--ready');
-                S.UI.simulate("晶晶❤️|我愿意陪你|校服到婚纱|青丝到白发|沧海到桑田|学校到殿堂|天涯到海角|天荒到地老|一直到永远|#countdown 3|I love you！❤️|#time");
+                S.UI.simulate("晶晶❤️|我愿意陪你|很久很久|要一直努力|共同走下去|我们都要一起|一直到永远|#countdown 3|晶晶！！❤️|#time");
                 S.Drawing.loop(function () {
                     S.Shape.render();
                 });
